--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.4.0
 click==8.1.7
 colorama==0.4.6
+colorlog==6.9.0
 dnspython==2.6.1
 ecdsa==0.19.0
 email_validator==2.2.0
