--- a/E-Platform/package.json
+++ b/E-Platform/package.json
@@ -18,7 +18,9 @@
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.3",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
