--- a/E-Platform/package.json
+++ b/E-Platform/package.json
@@ -11,16 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "bootstrap": "^5.3.3",
-    "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.3",
-    "react-toastify": "^11.0.3",
-    "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.1"
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
