--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -14,6 +14,7 @@ fastapi==0.114.2
 greenlet==3.1.0
 h11==0.14.0
 idna==3.9
+Jinja2==3.1.6
 Mako==1.3.6
 MarkupSafe==3.0.2
 passlib==1.7.4
@@ -33,6 +34,7 @@ six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.34
 starlette==0.38.5
+stripe==12.0.1
 typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.30.6
